# humblDATA

./: .cruft.json  .cursorignore  .cursorrules  .cz-config.js  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  micromamba_env.yml  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  pyproject_poetry.toml  replaceFunctions.md  sitemap.xml  test.ipynb  testing.ipynb
.agents/skills/render-background-workers/references/: queue-framework-setup.md
.agents/skills/render-blueprints/references/: preview-environments.md
.agents/skills/render-cli/: SKILL.md
.agents/skills/render-cron-jobs/: SKILL.md
.agents/skills/render-domains/: SKILL.md
.agents/skills/render-web-services/: SKILL.md
.claude/skills/render-background-workers/: SKILL.md
.claude/skills/render-deploy/: SKILL.md
.claude/skills/render-disks/: SKILL.md
.claude/skills/render-docker/: SKILL.md
.claude/skills/render-mcp/: SKILL.md
.claude/skills/render-migrate-from-heroku/: SKILL.md
.cursor/rules/: add-new-command.mdc  add-query-param.mdc  commit-conventions.mdc  humbldata-patterns.mdc  project-context.mdc  python-docstring.mdc  refactor-sync-to-async-api-client.mdc  tet-pattern.mdc
.cursor/skills/add-query-param/: SKILL.md
.cursor/skills/refactor-sync-to-async-api-client/: SKILL.md
.cursor/skills/render-blueprints/: SKILL.md
.cursor/skills/render-keyvalue/: SKILL.md
.cursor/skills/render-monitor/: SKILL.md
.cursor/skills/render-networking/: SKILL.md
.cursor/skills/render-scaling/: SKILL.md
.cursor/skills/render-workflows/: SKILL.md
.devcontainer/: devcontainer.json
.gemini/skills/render-debug/: SKILL.md
.gemini/skills/render-env-vars/: SKILL.md
.gemini/skills/render-postgres/: SKILL.md
.gemini/skills/render-private-services/: SKILL.md
.gemini/skills/render-static-sites/: SKILL.md
.github/: dependabot.yml
.github/workflows/: bump.yml  docs.yml  publish.yml  test.yml
.prompts/: run_code-explain.md  run_code-optimize.md  run_docstring.md  run_pytest.md  run_readme.md
code_design/: index.html
code_design/cccc_method/: index.html
code_design/mvcdb/: index.html
code_design/standardization_framework/: index.html
code_documentation/: index.html
code_documentation/api_reference/: index.html
code_documentation/category/: index.html
code_documentation/command/: index.html
code_documentation/context/: index.html
code_documentation/context/toolbox/: index.html
code_documentation/core/: index.html
contributing/: index.html
contributing/adding_function/: index.html
contributing/adding_test/: index.html
contributing/best_practices/: index.html
contributing/code_standards/: index.html
docs/: contributing.md  index.md  roadmap.md
docs/code_design/: cccc_method.md  index.md  mvcdb.md  standardization_framework.md
docs/code_documentation/: api_reference.md  category.md  command.md  core.md  index.md
docs/code_documentation/context/: index.md  portfolio.md  toolbox.md
docs/contributing/: adding_function.md  adding_test.md  best_practices.md  code_standards.md  index.md
docs/getting_started/: configuration.md  development_setup.md  index.md  installation.md  usage.md
getting_started/: index.html
getting_started/configuration/: index.html
getting_started/development_setup/: index.html
getting_started/installation/: index.html
getting_started/usage/: index.html
notebooks/: all_symbols.ipynb  calc_humbl_channel.ipynb  calc_mandelbrot_channel.ipynb  calc_realized_volatility.ipynb  create_humblobject_testdata.ipynb  humblCHANNEL_example.ipynb  humblCOMPASS-backtest.ipynb  humblCOMPASS_example.ipynb  momentum_example.ipynb  portfolio_usage.ipynb  test.ipynb  test_humblchannel.ipynb  test_humblcompass.ipynb  toolbox_usage.ipynb
notebooks/examples/: humblCHANNEL_example.ipynb  humblCOMPASS-backtest_example.ipynb  humblCOMPASS_example.ipynb  humblMOMENTUM_example.ipynb  humblPORTFOLIO_example.ipynb  momentum_example.ipynb
notebooks/investos/: first.ipynb  humbl_channel_simple_backtest.ipynb
notebooks/lumibot/: example.ipynb  humblCHANNEL_single_long.ipynb
notebooks/lumibot/logs/: MyStrategy_2024-12-04_16-48_5Q9YuQ_settings.json  MyStrategy_2024-12-04_16-48_5Q9YuQ_tearsheet.html
poe/: create_command.py
roadmap/: index.html
scripts/: __init__.py  add_command.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/code_design/: index.html
site/code_design/cccc_method/: index.html
site/code_design/mvcdb/: index.html
site/code_design/standardization_framework/: index.html
site/code_documentation/: index.html
site/code_documentation/api_reference/: index.html
site/code_documentation/category/: index.html
site/code_documentation/command/: index.html
site/code_documentation/context/: index.html
site/code_documentation/core/: index.html
site/contributing/: index.html
site/getting_started/: index.html
site/getting_started/configuration/: index.html
site/getting_started/development_setup/: index.html
site/getting_started/installation/: index.html
site/getting_started/usage/: index.html
site/roadmap/: index.html
site/search/: search_index.json
src/humbldata/: __init__.py  cli.py
src/humbldata/core/: __init__.py  constants.py  env.py  helpers.py
src/humbldata/portfolio/: portfolio_controller.py
src/humbldata/toolbox/: __init__.py  toolbox_controller.py  toolbox_helpers.py
tests/: __init__.py  test_add_command.py  test_cli.py  test_import.py
tests/core/: test_openbb_helpers.py
tests/integration/: test_mandelbrot_channel.py
tests/integration/portfolio/: test_queryParams.py
tests/integration/toolbox/: test_queryParams.py  test_query_data.py
tests/test_data/: mandelbrot_channel_historical.parquet  mandelbrot_current.pkl  mandelbrot_humblobject.pkl  test_data.parquet  test_data_pre_price_range.parquet  test_data_recent_prices.parquet
tests/unittests/core/: test_openbb_helpers.py
tests/unittests/scripts/: test_add_command.py
tests/unittests/toolbox/: test_helpers.py  test_toolbox_helpers.py
(+183 files in other folders)
