[project]
name = "humbldata"
version = "1.23.0"
description = "open-sourcing the math behind major financial institutional investors/banks. this package connects financial data analysis to the humblFINANCE website."
readme = "README.md"
authors = [
    { name = "jenningsFantini", email = "jenningsfantini+github@gmail.com" }
]
requires-python = ">=3.11,<3.13"

dependencies = [
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "python-redis-cache>=4.0.2",
    "uuid7>=0.1.0",
    "uvloop>=0.21.0",
    "coloredlogs>=15.0.1",
    "plotly>=6.0.1",
    "pandera>=0.23.1",
    "multidict>=6.4.3",
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "aiocache>=0.12.3",
    "limits>=5.2.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "investos",
    "scikit-learn>=1.7.2",
    # "aiobotocore>=2.24.2",
    # "cvxpy>=1.7.2",
    # "dask>=2025.9.0",
    # "dask-cloudprovider>=2025.9.0",
    # "requests>=2.32.5",
    # "statsmodels>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cruft>=2.14.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=3.6.3",
    "mkdocs-material>=9.5.13,<10.0.0",
    "mkdocs>=1.5.3,<2.0.0",
    "pytest>=8.3.5",
    "mkdocstrings[python]>=0.24.1,<0.25.0",
    "line-profiler>=4.1.2,<5.0.0",
    "mike>=2.0.0,<3.0.0",
    "orjson>=3.10.12,<4.0.0",
    "matplotlib>=3.10.6",
]
test = [
    "commitizen>=3.2.1",
    "coverage[toml]>=7.2.5",
    "cz-conventional-gitmoji>=0.2.0,<0.3.0",
    "mypy>=1.2.0",
    "poethepoet>=0.20.0",
    "pre-commit>=3.3.1",
    "pytest-clarity>=1.0.1",
    "pytest>=7.3.1",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.2.1",
    "ruff>=0.1.3",
    "safety>=2.3.4,!=2.3.5",
    "shellcheck-py>=0.9.0",
    "typeguard>=3.0.2",
    "pytest-asyncio>=0.23.7,<0.24.0",
]



[tool.cruft]
skip = ["menv/", "tests"]

[tool.commitizen]
name = "cz_gitmoji"
version = "1.23.0"
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "🔖 bump(release): v$current_version → v$new_version"
version_files = ["pyproject.toml:^version"]
path = ".cz-config.js"

[tool.commitizen.customize]
example = "feat: this feature enables customizing through pyproject.toml file"
schema = """
<type>(<scope>): <subject> \n
<BLANK LINE> \n
<body> \n
<BLANK LINE> \n
(BREAKING CHANGE: )<breaking> \n
<BLANK LINE> \n
(ISSUES: )<footer>
"""
schema_pattern = "(?s)(✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ add_dep|➖ rem_dep|💥 boom)(\\(\\S+\\))?!?:( [^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
bump_pattern = "^(✨ feat|🐛 fix|🚑 hotfix|⚡️ perf|♻️ refactor|⏪ revert|➕ dep-add|➖ dep-rm|💥 boom)"
bump_map = {"BREAKING CHANGE" = "MAJOR", "💥 boom" = "MAJOR", "✨ feat" = "MINOR", "🐛 fix" = "PATCH", "🚑 hotfix" = "PATCH", "⚡️ perf" = "PATCH", "♻️ refactor" = "PATCH", "➕ dep-add" = "PATCH", "➖ dep-rm" = "PATCH"}
change_type_order = ["BREAKING CHANGE", "💥 boom", "✨ feat", "🐛 fix", "🚑 hotfix", "♻️ refactor", "⚡️ perf", "🏗️ build", "💄 style", "📚 docs", "➕ dep-add", "➖ dep-rm"]
info = """
I have added a custom commit type `chore`.
"""
commit_parser = "^(?P<change_type>✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ add_dep|➖ rem_dep|💥 boom):\\s(?P<message>.*)?"
changelog_pattern = "^(✨ feat|🐛 fix|🚑 hotfix|🔧 chore|♻️ refactor|🚧 WIP|📚 docs|⚡️ perf|💄 style|🏗️ build|👷 ci|✅ test|⏪ revert|➕ dep-add|➖ dep-rm|💥 boom)?(!)?"
change_type_map = {"💥 boom" = "Breaking Changes", "🏗️ build" = "Build", "👷 ci" = "CI", "📚 docs" = "Docs", "✨ feat" = "Feat", "🐛 fix" = "Fix", "🚑 hotfix" = "Hotfix", "⚡️ perf" = "Perf", "♻️ refactor" = "Refactor", "💄 style" = "Style", "✅ test" = "Test", "🔧 chore" = "Chore", "⏪ revert" = "Revert", "➕ dep-add" = "Added Dependency", "➖ dep-rm" = "Removed Dependency"}



[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pydantic-mypy]  # https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=reports/pytest.xml" # removed --typeguard-packages=humbldata
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::polars.exceptions.PerformanceWarning"]
testpaths = ["src", "tests"]
xfail_strict = true
markers = [
  "integration: mark a test for integration/composition of other smaller functions",
  "slow: mark a test as slow to run"
]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
ignore-init-module-imports = true
line-length = 80
select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "UP", "W", "YTT"]
ignore = ["E501", "PGH001", "RET504", "S101"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.pycodestyle]
max-doc-length = 80

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.mccabe]
max-complexity = 10

[tool.poe.tasks]  # https://github.com/nat-n/poethepoet

[tool.poe.tasks.add_command]
script = "scripts.add_command:main"
help = "Generate boilerplate code for a new command"

[tool.poe.tasks.docs]
help = "Generate this package's docs using mkdocs"
cmd = """
  mkdocs build
    --clean
    --config-file mkdocs.yml
    --site-dir $outputdirectory
    --theme $theme
    --verbose
"""

[[tool.poe.tasks.docs.args]]
help = "The output directory for the documentation (default: site)"
name = "outputdirectory"
options = ["--site-dir"]
default = "site"

[[tool.poe.tasks.docs.args]]
help = "The theme for the documentation (choose from: material, readthedocs, mkdocs; default: material)"
name = "theme"
options = ["--theme"]
default = "material"

[tool.poe.tasks.lab]
help = "Run Jupyter Lab"

[[tool.poe.tasks.lab.sequence]]
cmd = "mkdir -p notebooks"

[[tool.poe.tasks.lab.sequence]]
cmd = """
  jupyter lab
    --allow-root
    --notebook-dir notebooks
"""

[tool.poe.tasks.lint]
help = "Lint this package"

[[tool.poe.tasks.lint.sequence]]
cmd = """
  pre-commit run
    --all-files
    --color always
"""

[[tool.poe.tasks.lint.sequence]]
shell = "safety check --continue-on-error --full-report"

[tool.poe.tasks.test]
help = "Test this package"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage run"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage report"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage xml"

[tool.uv.sources]
investos = { git = "https://github.com/jjfantini/investos.git" }

